25-jul morning backup

--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ body {
 /* Pagination css */
 .paginationButtons {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   margin-top: 20px;
   list-style: none;
